adapted rules to current situation
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@753 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-export DH_COMPAT=4
+# export DH_COMPAT=4
 
 # include /usr/share/dpatch/dpatch.make
 
