Changes towards icmake 7.00
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@783 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: icmake
 Section: devel
 Priority: optional
 Maintainer: Francesco Paolo Lovergine <frankie@debian.org>
-Build-Depends: debhelper (>= 4.0.0)
+Uploaders: Frank B. Brokken <f.b.brokken@rug.nl>
+Build-Depends: debhelper (>= 5.0.37.3)
 Standards-Version: 3.7.2
 
 Package: icmake
