add NEWS.Debian describing the function change that might affect some old scripts
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@787 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/rules
+++ b/debian/rules
@@ -47,7 +47,7 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs CHANGES
-	dh_installdocs icmake.doc doc/icmake.ps examples debian/mail.frank
+	dh_installdocs icmake.doc doc/icmake.ps examples debian/mail.frank debian/NEWS.Debian
 	dh_installexamples
 #   dh_installmenu
 #   dh_installdebconf
