This version runs clean. Note the debian/control and rules changes
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@861 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,9 @@ Source: icmake
 Section: devel
 Priority: optional
 Maintainer: Francesco Paolo Lovergine <frankie@debian.org>
-Build-Depends: debhelper (>= 2), dpatch 
+Uploaders: George Danchev <danchev@spnet.net>, 
+           Frank B. Brokken <f.b.brokken@rug.nl>
+Build-Depends: debhelper (>= 5.0.37.3), dpatch 
 Standards-Version: 3.7.2
 
 Package: icmake
