--- a/debian/rules
+++ b/debian/rules
@@ -47,7 +47,7 @@ binary-arch: build install
 	dh_installchangelogs CHANGES
 	dh_installdocs icmake.doc doc/icmake.ps debian/mail.frank
 	dh_installexamples
-	dh_installman doc/icmake.1
+	dh_installman doc/icmake.1 doc/icmbuild.1
 	dh_link usr/share/man/man1/icmake.1 usr/share/man/man1/icmun.1
 	dh_strip
 	dh_compress
