Using flexible lexer string buffer (lexstring) in icmcomp
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@52 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/build
+++ b/icmake/build
@@ -6,7 +6,7 @@ void main()
     list    progdirs;
     int     idx;
 
-    progs = "make pp comp exec";
+    progs = "make pp comp exec un";
     progdirs = strtok(progs, " ");
 
     chdir("rss");
