--- a/icmake/usr/share/icmake/icmstart.rc
+++ b/icmake/usr/share/icmake/icmstart.rc
@@ -1,13 +1,12 @@
 # This file contains lines mentioning frame files to install by icmstart
 # empty lines and lines starting with # are ignored.
-# files may be given a (relative) path-prefix. Files are installed by tar, see
-# icmstart(1)'s man-page
+
+# Files and directories are installed by tar, see icmstart(1)'s man-page
+# Confirmation to install is required for entries on lines starting with ?
 
 main.cc     
 main.ih     
 usage.cc
 version.cc
 
-#scanner
-#parser
-
+? scanner parser
