--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ build-stamp: # FBB: Removed it. I have no patches: patch-stamp
 	dh_testdir
 
 	# Add here commands to compile the package.
-	sh bootstrap
+	sh bootstrap.sh
 
 	touch build-stamp
 
