--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/<packagename>
-	dh_install
+	dh_install bin/icmbuild bin/icmstart /usr/bin
 
 # Build architecture-independent files here.
 binary-indep: build install
