--- a/icmake/build
+++ b/icmake/build
@@ -2,7 +2,7 @@
 
 // Undefine the following to compile with an extensive set of flags, for 
 // testing purposes only. Leave commented out in normal cases.
-#define EXTENSIVE
+// #define EXTENSIVE
 
 void main()
 {
