Alert for 'unix' message added to 'build', using -O2 in def/programs
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@390 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/build
+++ b/icmake/build
@@ -2,7 +2,7 @@
 
 // Undefine the following to compile with an extensive set of flags, for 
 // testing purposes only. Leave commented out in normal cases.
-// #define EXTENSIVE
+#define EXTENSIVE
 
 void main()
 {
@@ -10,6 +10,10 @@ void main()
     list    progdirs;
     int     idx;
     string  extensive;
+
+    printf("This is the extensive build script.\n"
+            "Normally call `unix' [press enter or ^C] ");
+    getch();
 
 #ifdef EXTENSIVE
     extensive = " -e";
