Added CYGWIN support to bootstrap.sh and other scripts
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@394 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/exec/build
+++ b/icmake/exec/build
@@ -22,7 +22,7 @@ void setClasses()
 //  ADD ADDITIONAL DIRECTORIES CONTAINING SOURCES OF CLASSES HERE
 //  Use the construction `CLASSES += "classname1 classname2";' etc.
 
-    CLASSES += "auks var virtual int list string stack opcodefun builtin ";
+    CLASSES += "aux var virtual int list string stack opcodefun builtin ";
 }
 
 #define BUILD_LIBRARY
