--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,8 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/<packagename>
-	dh_install bin/icmbuild bin/icmstart /usr/bin
+	dh_install bin/icmbuild bin/icmstart    /usr/bin
+	dh_install usr/share/icmake             /usr/share
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -58,6 +59,58 @@ binary-arch: build install
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
+
+# The following is for internal development usage only
+# Update that sum when new _upstream_ releases occur, this
+# catches silent file content forges at the upstream server side
+# Archive downloaded from https://www.icce.rug.nl/debian/icmake
+#	file: icmake_x.y.z.tar.gz
+MD5TRUSTED := 9a0555de725fa95fa689f5f8db2ed064
+
+DEBVERSION:=$(shell head -n 1 debian/changelog | sed -e 's/^[^(]*(\([^)]*\)).*/\1/')
+UPVERSION:=$(shell echo $(DEBVERSION) | sed -e 's/^.*://' -e 's/-[0-9.]*$$//' -e 's/.dfsg$$//')
+UPNAME := icmake
+UPFILE := $(UPNAME)_$(UPVERSION).tar.gz
+DEFILE := $(UPNAME)_$(UPVERSION).orig.tar.gz
+URL    := https://www.icce.rug.nl/debian/icmake
+MD5CURRENT := `md5sum ../tarballs/$(DEFILE) | sed -e 's/ .*//'`
+SVNTRUNK   := https://svn.sourceforge.net/svnroot/bisoncpp/trunk/icmake
+
+get-orig-source:
+	@@dh_testdir
+	@@[ -d ../tarballs/. ]||mkdir -p ../tarballs
+
+	-@if [ ! -f ../tarballs/$(DEFILE) ] ; then \
+		echo "Downloading $(URL)/$(UPFILE) from $(URL)/$(UPFILE) ..." ; \
+		wget --no-check-certificate --quiet -N -nv -T10 -t3 -O \
+             ../tarballs/$(DEFILE) $(URL)/$(UPFILE) ; \
+	else \
+		echo "Upstream source tarball have been already downloaded" ; \
+	fi
+
+	-@if [ "$(MD5CURRENT)" != "$(MD5TRUSTED)" ] ; then \
+		echo "Expecting upstream filename md5sum $(MD5TRUSTED), but $(MD5CURRENT) found" ; \
+		echo "Upstream filename md5sum is NOT trusted! Possible upstream filename forge!" ; \
+		false ; \
+	else \
+		echo "Upstream filename md5sum is trusted!" ; \
+	fi
+
+
+get-svn-trunk:
+	@@dh_testdir
+	@@[ -d ../tarballs/. ]||mkdir -p ../tarballs
+	rm -rf ../tarballs/$(DEFILE) ../tarballs/icmake-svn-trunk
+	svn --force export $(SVNTRUNK) ../tarballs/icmake-svn-trunk
+	@@if [ -d ../tarballs/icmake-svn-trunk/debian ] ; then rm -rf ../tarballs/icmake-svn-trunk/debian; fi
+	@@ echo Building the SVN TRUNK tarball in ../tarballs/$(DEFILE)
+	@@GZIP=-9 tar -b1 -czf ../tarballs/$(DEFILE) -C ../tarballs icmake-svn-trunk
+	rm -rf ../tarballs/icmake-svn-trunk
+
+
+print-version:
+	@@echo "Debian version:          $(DEBVERSION)"
+	@@echo "Upstream version:        $(UPVERSION)"
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install patch unpatch myclean
