--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: devel
 Priority: optional
 Maintainer: Francesco Paolo Lovergine <frankie@debian.org>
 Uploaders: George Danchev <danchev@spnet.net>, 
-           Frank B. Brokken <f.b.brokken@rug.nl>
+           Frank B. Brokken <f.b.brokken@rug.nl>,
+           tony mancill <tmancill@debian.org>
 Build-Depends: debhelper (>= 5.0.0), dpatch 
 Standards-Version: 3.7.2
 
