Updated standards and repaired dpatch descr. and copyright notice
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1250 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,9 @@ Priority: optional
 Maintainer: Francesco Paolo Lovergine <frankie@debian.org>
 Uploaders: George Danchev <danchev@spnet.net>, 
            Frank B. Brokken <f.b.brokken@rug.nl>,
-           tony mancill <tmancill@debian.org>
+           Tony Mancill <tmancill@debian.org>
 Build-Depends: debhelper (>= 5.0.0), dpatch 
-Standards-Version: 3.7.2
+Standards-Version: 3.8.0
 
 Package: icmake
 Architecture: any
