drop patches applied upstream
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1255 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Francesco Paolo Lovergine <frankie@debian.org>
 Uploaders: George Danchev <danchev@spnet.net>, 
            Frank B. Brokken <f.b.brokken@rug.nl>,
            Tony Mancill <tmancill@debian.org>
-Build-Depends: debhelper (>= 5.0.0), dpatch 
+Build-Depends: debhelper (>= 5.0.0)
 Standards-Version: 3.8.0
 
 Package: icmake
