--- a/debian/rules
+++ b/debian/rules
@@ -5,10 +5,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-include /usr/share/dpatch/dpatch.make
-
 build: build-stamp
-build-stamp: # FBB: Removed it. I have no patches: patch-stamp
+build-stamp:
 	dh_testdir
 
 	# Add here commands to compile the package.
@@ -16,7 +14,7 @@ build-stamp: # FBB: Removed it. I have no patches: patch-stamp
 
 	touch build-stamp
 
-clean: myclean unpatch
+clean: myclean
 myclean:
 	dh_testdir
 	dh_testroot
@@ -113,4 +111,4 @@ print-version:
 	@@echo "Upstream version:        $(UPVERSION)"
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install patch unpatch myclean
+.PHONY: build clean binary-indep binary-arch binary install myclean
