added Homepage and Vcs-Svn tags to control
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1407 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,8 @@ Uploaders: George Danchev <danchev@spnet.net>,
            Tony Mancill <tmancill@debian.org>
 Build-Depends: debhelper (>= 6.0.5)
 Standards-Version: 3.8.1
+Homepage: http://icmake.sourceforge.net/
+Vcs-Svn: https://svn.openfmi.net/debian-addons-bg/icmake/trunk
 
 Package: icmake
 Architecture: any
