--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Francesco Paolo Lovergine <frankie@debian.org>
 Uploaders: George Danchev <danchev@spnet.net>, 
            Frank B. Brokken <f.b.brokken@rug.nl>,
-           Tony Mancill <tmancill@debian.org>
+           tony mancill <tmancill@debian.org>
 Build-Depends: debhelper (>= 6.0.5)
 Standards-Version: 3.8.2
 Homepage: http://icmake.sourceforge.net/
@@ -24,7 +24,7 @@ Package: icmake-doc
 Architecture: all
 Section: doc
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description:  Intelligent C-like MAKEr, or the ICce MAKE utility
+Description:  Documenation files for icmake.
  Icmake is a hybrid between a 'make' utility and a 'shell script'
  language.  Originally, it was written to provide a useful tool for
  automatic program maintenance and system administrative tasks on MS-DOS
