one more tweak to icmake-doc description
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1433 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Package: icmake-doc
 Architecture: all
 Section: doc
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description:  Documenation files for icmake.
+Description:  Documenation files for icmake
  Icmake is a hybrid between a 'make' utility and a 'shell script'
  language.  Originally, it was written to provide a useful tool for
  automatic program maintenance and system administrative tasks on MS-DOS
