--- a/debian/control
+++ b/debian/control
@@ -6,13 +6,13 @@ Uploaders: George Danchev <danchev@spnet.net>,
            Frank B. Brokken <f.b.brokken@rug.nl>,
            tony mancill <tmancill@debian.org>
 Build-Depends: debhelper (>= 6.0.5)
-Standards-Version: 3.8.2
+Standards-Version: 3.8.3
 Homepage: http://icmake.sourceforge.net/
 Vcs-Svn: https://svn.openfmi.net/debian-addons-bg/icmake/trunk
 
 Package: icmake
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: icmake-doc
 Description: Intelligent C-like MAKEr, or the ICce MAKE utility
  Icmake is a hybrid between a 'make' utility and a 'shell script'
