Repaired flaw in icmbuild, see changelog
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@1023 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/scripts/icmbuild.in
+++ b/icmake/scripts/icmbuild.in
@@ -105,7 +105,7 @@ void scanner()
 
     if (!rerun)
     {
-        scanfiles = makelist(PARSSPEC);
+        scanfiles = makelist(PARSSPEC) + makelist(SCANSPEC);
     
         #ifdef SCANFILES
             scanfiles += makelist(SCANFILES);
