Script/doc updates
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@1129 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/doc/manpage/build
+++ b/icmake/doc/manpage/build
@@ -42,6 +42,7 @@ void main(int argc, list argv)
     yodl("../icmstart.1", "icmstart.yo");
     yodl("../icmbuild.1", "icmbuild.yo");
     yodl("../icmstart.rc.7", "icmstart.rc.yo");
+    yodl("../icmconf.7", "icmconf.yo");
 
     rmrelease();
 }
