typo in icmbuild repaired
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@1133 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/scripts/icmbuild.in
+++ b/icmake/scripts/icmbuild.in
@@ -312,8 +312,8 @@ void shared_library(string libso, string libsoshared)
 
         system(COMPILER " -shared -Wl,--as-needed,-z,defs,-soname," + 
                 libsomajor + 
-                " -o " + TMP_DIR + "/" + libsoshared + " */o/*.o 
-                " SHAREDREQ);
+                " -o " + TMP_DIR + "/" + libsoshared + " */o/*.o "
+                SHAREDREQ);
     
         chdir(TMP_DIR);
     
