--- a/icmake/scripts/icmstart.in
+++ b/icmake/scripts/icmstart.in
@@ -6,6 +6,7 @@ string g_userHome;
 string g_skelpath = "@SKELDIR@";
 string g_program;
 string g_defaultcommand = "";
+string g_defaultcommandArg;
 string g_destpath;
 string g_cwd;
 list   g_mkdir;
@@ -155,11 +156,18 @@ void arguments(int argc, list argv)
 
     if (++cmdidx < argc)
     {
-        arg = argv[cmdidx];
-        if (arg == "program" || arg == "library")
-            g_defaultcommand = "#define DEFCOM \"" + arg + "\"\n";
+        g_defaultcommandArg = argv[cmdidx];
+        if 
+        (
+            g_defaultcommandArg == "program" 
+            || 
+            g_defaultcommandArg == "library"
+        )
+            g_defaultcommand = 
+                        "#define DEFCOM \"" + g_defaultcommandArg + "\"\n";
         else
-            printf("Ignored initial command `", arg, "' for icmbuild\n");
+            printf("Ignored initial command `", g_defaultcommandArg, 
+                                                        "' for icmbuild\n");
     }
 }
 
@@ -241,7 +249,12 @@ int install_dest(string source, string dest)
     // a second entry may be dest (path OK): destpath/dest will be the
     // destination. E.g.:
     //  name  one/two       - skelpath/name is installed as destpath/one/two
-    // A first argument ? on the line indicates that installation is optional
+    // All lines may start with a P (+space) or L (+space).
+    // A source at a P-line is not installed when using 'icmstart xxx library'
+    // A source at an L-line is not installed when using 'icmstart xxx
+    // program' If omitted the source is installed unconditionally.
+    // Following P or L (+space) an optional ? (+ space) may be specificed 
+    // in which case the installation must be confirmed by the user
 int install_file(string source, string dest)
 {
     int idx;
@@ -285,31 +298,38 @@ string findFile(string file)
     if (ret == "")                          // not found, locate in CONFDIR
         ret = find("@CONFDIR@", file);
 
-    if (ret == "")
-        die("Can't find `" + file + "'\n");
-
     return ret;
 }
 
-void install_conf(string file)
+void install_conf(string file, string default)
 {
     string ret;
     ret = findFile(file);
+
     if (g_skeletons)
-        system("cat " + ret + " >> " + g_destpath + "VERSION");
+    {
+        if (ret != "")
+            system("cat " + ret + " >> " + g_destpath + "VERSION");
+        else
+            fprintf(g_destpath + "VERSION", 
+                        "#define ", file, " \"", default, "\"\n");
+    }
 }    
 
 void install_version()
 {
-    string version;
-    version = g_destpath + "VERSION";
+    string str;
+    str = g_destpath + "VERSION";
 
-    if (install(version))
+    if (install(str))
     {
         system(P_NOCHECK, "rm -f " + g_destpath + "VERSION");
-        install_conf("AUTHOR");
-        install_conf("VERSION");
-        install_conf("YEARS");
+        install_conf("AUTHOR",  "");
+        install_conf("VERSION", "0.00.00");
+
+        str = "date '+%Y'";
+        str = `str`[0];
+        install_conf("YEARS", substr(str, 0, strlen(str) - 1));
     }
 }
 
@@ -344,6 +364,18 @@ string check_home(string source)
     return g_userHome + substr(source, 1, strlen(source));
 }
 
+list shift(list source)     // shift away the first element
+{
+    list ret;
+    int idx;
+
+    for (idx = 1; idx != sizeof(source); ++idx)
+        ret += (list)source[idx];
+
+    return ret;
+}
+
+    
     // a line in the conffile may be organized as follows (name is either
     //  a file or a directory; directories are copied completely):
     //  name        - name is located in skelpath and installed at destpath
@@ -354,12 +386,21 @@ string check_home(string source)
     //                destpath. Relative is relative to the startup directory
     //  path/name dest - relative or absolute path's name will be installed
     //                at destpath/dest. dest may also be /dest
+    // All lines may start with a P (+space) or L (+space).
+    // A source at a P-line is not installed when using 'icmstart xxx library'
+    // A source at an L-line is not installed when using 'icmstart xxx
+    // program' If omitted the source is installed unconditionally.
+    // Following P or L (+space) an optional ? (+ space) may be specificed 
+    // in which case the installation must be confirmed by the user
+
 void install_line(string confline)
 {
     int idx;
     list fields;
     string source;
     string dest;
+    string plFlag;
+    string install;
 
     fields = strtok(confline, " \t\n");
     source = fields[0];
@@ -368,15 +409,33 @@ void install_line(string confline)
     if (sizeof(fields) == 0 || source[0] == "#")
         return;
 
+    install = source;
+    if (install == "P" || install == "L")
+    {
+        fields = shift(fields);             // rm the P/L-flag
+        source = fields[0];
+    }
+    else
+        install = "";
+
     g_confirminstall = source == "?";       // need confirmation ?
 
-    if (g_confirminstall)                   // set source and dest fm confline
+    if (g_confirminstall)
     {
-        dest = source = fields[1];
-        if (sizeof(fields) > 2)
-            dest = fields[2];
+        fields = shift(fields);             // rm the ?-mark
+        source = fields[0];
     }
-    else if (sizeof(fields) > 1)
+
+    if 
+    (
+        g_defaultcommandArg == "library" && install == "P"
+        ||
+        g_defaultcommandArg == "program" && install == "L"
+    )
+        return;                             // no P with libs, no L with progs
+
+
+    if (sizeof(fields) > 1)
         dest = fields[1];
     else
         dest = source;
